log
Fri May  8 09:56:54 PM UTC 2026: 
 tests:  0|6
========================================
b0b99a7
Fri May  8 10:07:21 PM UTC 2026: 
 tests:  0|6
========================================
36e8bf5
Fri May 15 01:12:39 AM UTC 2026: 
 tests:  0|6
========================================
46bc9bb
Fri May 15 01:19:54 AM UTC 2026: 
 graph.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|6
========================================
53a5f33
Fri May 15 01:21:51 AM UTC 2026: 
 graph.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  0|0
a9dcb4d
Fri May 15 01:28:11 AM UTC 2026: 
 graph.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:40:25: error: implicit declaration of function ‘search’; did you mean ‘bsearch’? [-Wimplicit-function-declaration]
   40 |     MapPair *auxiliar = search(g->adjacencyMap, label);
      |                         ^~~~~~
      |                         bsearch
graph.c:40:25: error: initialization of ‘MapPair *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
graph.c:43:19: error: implicit declaration of function ‘strup’; did you mean ‘strdup’? [-Wimplicit-function-declaration]
   43 |     char *copia = strup(label);
      |                   ^~~~~
      |                   strdup
graph.c:43:19: error: initialization of ‘char *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
8f910ec
Fri May 15 01:28:26 AM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:40:25: error: implicit declaration of function ‘search’; did you mean ‘bsearch’? [-Wimplicit-function-declaration]
   40 |     MapPair *auxiliar = search(g->adjacencyMap, label);
      |                         ^~~~~~
      |                         bsearch
graph.c:40:25: error: initialization of ‘MapPair *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
d22b4cd
Fri May 15 01:28:54 AM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:40:53: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   40 |     MapPair *auxiliar = map_search(g->adjacencyMap, label);
      |                                                     ^~~~~
In file included from graph.c:8:
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
cc1: all warnings being treated as errors
fcf62ae
Fri May 15 01:29:32 AM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ef9a9e3
Fri May 15 06:42:29 PM UTC 2026: 
 graph.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:64:26: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
   64 |     if(auxiliar != NULL) return;
      |                          ^~~~~~
graph.c:60:5: note: declared here
   60 | int getWeight(Graph* g, const char* label1, const char* label2) {
      |     ^~~~~~~~~
graph.c:69:46: error: passing argument 2 of ‘is_equal_string’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   69 |         if(is_equal_string(elemento->target, label2) == 0) return elemento->weight;
      |                                              ^~~~~~
graph.c:21:39: note: expected ‘void *’ but argument is of type ‘const char *’
   21 | int is_equal_string(void *key1, void *key2) {
      |                                 ~~~~~~^~~~
cc1: all warnings being treated as errors
dad0fd5
